# C_project

./: .gitignore  README.md
Assignment_2/: CMakeLists.txt  LICENSE  arraylist.h  main.cpp  main.h  mathsin.h  readme.md
OS/source/: build.sh
SUSTech_Helper/: README.md
SUSTech_Helper/SUSTech_Helper/: author~.storyboard  au~.storyboard
SUSTech_Helper/SUSTech_Helper/SUSTech_Helper/: AppDelegate.h  AppDelegate.m  AppDelegate.mm  Date.strings  GPA.h  GPA.hpp  GPA.mm  GPA~.storyboard  IOcore.m  Info.plist  LICENSE  README.md  SceneDelegate.h  SceneDelegate.m  ViewController.h  ViewController.m  ViewController.mm  author.storyboard  button.m  button.mm  file.h  file.mm  lib.h  lib.mm  libofcpp.m  libofcpp.mm  main.m  method.mm  source.hpp
SUSTech_Helper/SUSTech_Helper/SUSTech_Helper.xcodeproj/: project.pbxproj
SUSTech_Helper/SUSTech_Helper/SUSTech_Helper.xcodeproj/project.xcworkspace/xcuserdata/happys.xcuserdatad/: UserInterfaceState.xcuserstate
SUSTech_Helper/SUSTech_Helper/SUSTech_Helper.xcodeproj/xcuserdata/happys.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
SUSTech_Helper/SUSTech_Helper/SUSTech_Helper.xcodeproj/xcuserdata/happys.xcuserdatad/xcschemes/: SUSTech_Helper.xcscheme  xcschememanagement.plist
SUSTech_Helper/SUSTech_Helper/SUSTech_Helper/Assets.xcassets/AppIcon.appiconset/: Contents.json
SUSTech_Helper/SUSTech_Helper/SUSTech_Helper/Assets.xcassets/IMG_0015.imageset/: Contents.json
SUSTech_Helper/SUSTech_Helper/SUSTech_Helper/Assets.xcassets/Image.imageset/: Contents.json
SUSTech_Helper/SUSTech_Helper/SUSTech_Helper/Assets.xcassets/scan.imageset/: Contents.json
SUSTech_Helper/SUSTech_Helper/SUSTech_Helper/Base.lproj/: GPA~.storyboard  LaunchScreen.storyboard  Main.storyboard  Web.storyboard  au.storyboard  authors~.storyboard
SUSTech_Helper/SUSTech_Helper/SUSTech_HelperTests/: SUSTech_HelperTests.m
SUSTech_Helper/SUSTech_Helper/SUSTech_HelperUITests/: SUSTech_HelperUITests.m
as3/: CMakeLists.txt  LinkedList.h  main.cpp  readme.md  test.txt
as3/Julia/: CMakeLists.txt  Juliacore.jl  cross_system.h  main.cpp
as3/cuda/: ArrayList.h  CMakeLists.txt  CodeError.h  GPU.h  LinkedList.h  main.cu
as3/normal/: CMakeLists.txt  CodeError.h  main.cpp  main.h
as3/openblas/: CMakeLists.txt  main.h  test.cpp
as3/result/: test.txt
as4/: README.md
as4/code/: ARM_library.cpp  library.cpp
as4/release/: Linux.7z  arm.7z  macOS.7z  win.7z
as4/release/macOS/include/: library.h
as4/source/: ARM_library.cpp  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  library.cpp  library.h  matrix.cbp
as4/test/: CMakeLists.txt  main.cpp
as4/test/lib/: library.h
final_project/: .gitignore  README.md
final_project/release/OpenGUI_v1.0.1/OpenGUI/FreeText/lib/pkgconfig/: freetype2.pc
final_project/release/OpenGUI_v1.0.1/OpenGUI/Header/: OpenGUI_Button.hpp
final_project/release/OpenGUI_v1.0.1/OpenGUI/OpenGL/GLTools/: GLBatch.h  GLShaderManager.h
final_project/release/OpenGUI_v1.0.1/OpenGUI/OpenGL/glm/0.9.9.8/: INSTALL_RECEIPT.json
final_project/release/OpenGUI_v1.0.1/OpenGUI/OpenGL/glm/0.9.9.8/share/man/html/: dir_026c2db901f78a36dbfb31e1a16d14ee.html  dir_5e8a7bbde1a4928aae401de5a4a8708b.html  dir_9772ccb6a29be78f43aa052a53591bde.html  dir_a1433cc4e903b36d8a2807204d3ebe89.html  dir_be33f37269b1df0a84cbb713868f6dd2.html  files.html
final_project/release/OpenGUI_v1.0/Header/: Color.h  Func.h  OpenGUI_Button.h  OpenGUI_frame.h
final_project/release/OpenGUI_v1.0/OpenGL/GLTools/: GLTriangleBatch.h  libgltools.dylib
final_project/source/: CMakeLists.txt
final_project/source/Frame/: Func.h  OpenGUI_Button.cpp  OpenGUI_Button.h  OpenGUI_TextBox.cpp  OpenGUI_TextBox.h  OpenGUI_frame.cpp  OpenGUI_frame.h  OpenGUI_label.cpp  OpenGUI_label.h
final_project/source/Header/: Color.hpp  Func.h  Func.hpp  GUIroot.h  GUIroot.hpp  KeyBorad.h  KeyBorad.hpp  OpenGUI_Button.hpp  OpenGUI_TextBox.h  OpenGUI_frame.h  OpenGUI_frame.hpp  OpenGUI_label.hpp
final_project/source/OpenGL/FreeText/lib/: libfreetype.6.dylib
final_project/source/OpenGL/glew/2.2.0/: INSTALL_RECEIPT.json
final_project/source/OpenGL/glfw/3.3.2/include/GLFW/: glfw3.h
final_project/source/Top/: OpenGUI.cpp  OpenGUI.h
final_project/test/: CMakeLists.txt  Shader.h  main.cpp
final_project/test/OpenGUI/Header/: Color.hpp  Func.h  Func.hpp  GUIroot.h  OpenGUI_Button.h  OpenGUI_frame.h  OpenGUI_frame.hpp  OpenGUI_label.h
final_project/test/OpenGUI/OpenGL/GLTools/: GLTools.h
final_project/test/OpenGUI/OpenGL/glfw/3.3.2/: INSTALL_RECEIPT.json
final_project/test/OpenGUI/OpenGL/glm/0.9.9.8/.brew/: glm.rb
final_project/test/OpenGUI/OpenGL/glm/0.9.9.8/lib/pkgconfig/: glm.pc
final_project/test/OpenGUI/OpenGL/glm/0.9.9.8/share/man/html/: a00002_source.html  index.html
final_project/test/OpenGUI/lib/Header/: GUIroot.hpp  OpenGUI_Button.hpp  OpenGUI_frame.hpp  OpenGUI_label.hpp
openGL/: CMakeLists.txt
project/: readme.md
project/release/macOS/: CMakeCache.txt  Makefile  cmake_install.cmake
project/source/: CMakeLists.txt  library.cpp  library.h  matrix.h
project/test/: CMakeLists.txt  main.cpp
project/test/lib/: library.h
project/test/openblas/OpenBLAS-0.3.10/: CMakeCache.txt
project1/: CMakeLists.txt
