cmake_minimum_required(VERSION 3.17)
project(openblass)
set(Open_bl /usr/local/Cellar/openblas/0.3.10_2)
set(INC_DIR ${Open_bl}/include)
set(LINK ${Open_bl}/lib)
set(CMAKE_CXX_STANDARD 14)
include_directories(${INC_DIR})
link_directories(${LINK})
link_libraries(openblas)
add_executable(openblass main.cpp cross_system.h CodeError.h main.h)
target_link_libraries(openblass openblas)