cmake_minimum_required(VERSION 3.17)
project(matrix)
IF (WIN32)
	MESSAGE(STATUS "Your are using Windows")
ELSEIF (APPLE)
	MESSAGE(STATUS "Your are using MacOS ,this cmake can't be used in MacOS because clang will stop this project for using gcc")
    message(FATAL_ERROR "Error: We don't suppose the MacOS, please use the terminal to compile this program")
ELSEIF (UNIX)
	MESSAGE(STATUS "Your are using Linux")
ENDIF ()

FIND_PACKAGE( OpenMP REQUIRED)
if(OPENMP_FOUND)
    message("OPENMP FOUND")
    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS} -mfma")
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS} -mfma")
    set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${OpenMP_EXE_LINKER_FLAGS} -mfma ")
endif()
set(CMAKE_CXX_STANDARD 14)


add_library(matrix library.cpp library.h)